refactor(build): Remove the UA_ENABLE_PUBSUB_MQTT option
MQTT is now enabled via UA_ENABLE_MQTT.
This can be used for the EventLoop independently from PubSub as well.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -262,18 +262,16 @@ if(UA_ENABLE_PUBSUB)
         endif()
     endif()
 
-
-    if(UA_ENABLE_PUBSUB_MQTT)
-        if(NOT WIN32)
-            include_directories(${PROJECT_SOURCE_DIR}/../plugins)
-            add_example(tutorial_pubsub_mqtt_publish pubsub/tutorial_pubsub_mqtt_publish.c)
-            add_example(tutorial_pubsub_mqtt_subscribe pubsub/tutorial_pubsub_mqtt_subscribe.c)
-        endif()
+    if(UA_ENABLE_MQTT)
+        add_example(tutorial_pubsub_mqtt_publish pubsub/tutorial_pubsub_mqtt_publish.c)
+        add_example(tutorial_pubsub_mqtt_subscribe pubsub/tutorial_pubsub_mqtt_subscribe.c)
     endif()
+
     if(UA_ENABLE_PUBSUB_FILE_CONFIG)
         add_example(server_pubsub_file_configuration pubsub/server_pubsub_file_configuration.c)
     endif()
-    if (UA_ENABLE_PUBSUB_MONITORING)
+
+    if(UA_ENABLE_PUBSUB_MONITORING)
         if(CMAKE_SYSTEM MATCHES "Linux")
             add_example(server_pubsub_subscribe_custom_monitoring pubsub/monitoring/server_pubsub_subscribe_custom_monitoring.c)
         else(NOT (CMAKE_SYSTEM MATCHES "Linux"))
