--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -459,64 +459,6 @@ endif()
 option(UA_ENABLE_MQTT "Enable MQTT connections for the EventLoop" OFF)
 mark_as_advanced(UA_ENABLE_MQTT)
 
-option(UA_ENABLE_PUBSUB_MQTT "Enable publish/subscribe with mqtt (experimental)" OFF)
-mark_as_advanced(UA_ENABLE_PUBSUB_MQTT)
-if(UA_ENABLE_PUBSUB_MQTT)
-    if(UA_ENABLE_AMALGAMATION)
-        # MQTT Support currently not compatible with the amalgamation
-        message(FATAL_ERROR "Amalgamation cannot be generated with MQTT enabled")
-    endif()
-
-    include_directories("${open62541_MQTT_DIR}/include")
-    if(NOT UA_FILE_MQTT)
-        set(UA_FILE_MQTT ${open62541_MQTT_DIR}/src/mqtt.c)
-    endif()
-    if(NOT EXISTS "${UA_FILE_MQTT}")
-        message(STATUS "Submodule update")
-        execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
-                        RESULT_VARIABLE GIT_SUBMOD_RESULT)
-        if(NOT GIT_SUBMOD_RESULT EQUAL "0")
-            message(FATAL_ERROR "git submodule update --init --recursive failed with ${GIT_SUBMOD_RESULT}")
-        endif()
-    endif()
-    # Warn if run in Windows
-    if(WIN32)
-        MESSAGE(WARNING "Multithreading is enabled in MQTT plugin. This feature is under development and marked as EXPERIMENTAL")
-    endif()
-    if(NOT UA_ENABLE_PUBSUB)
-        message(FATAL_ERROR "Mqtt cannot be used with disabled PubSub function.")
-    endif()
-    configure_file(${PROJECT_SOURCE_DIR}/deps/mqtt-c/include/mqtt.h "${PROJECT_BINARY_DIR}/src_generated/mqtt.h" COPYONLY)
-    configure_file(${PROJECT_SOURCE_DIR}/deps/mqtt-c/include/mqtt_pal.h "${PROJECT_BINARY_DIR}/src_generated/mqtt_pal.h" COPYONLY)
-    configure_file(${PROJECT_SOURCE_DIR}/plugins/mqtt/templates/posix_sockets.h "${PROJECT_BINARY_DIR}/src_generated/posix_sockets.h" COPYONLY)
-endif()
-
-option(UA_ENABLE_MQTT_TLS_OPENSSL "Enable TLS support for publish/subscribe with mqtt (use OpenSSL)" OFF)
-mark_as_advanced(UA_ENABLE_MQTT_TLS_OPENSSL)
-option(UA_ENABLE_MQTT_TLS_MBEDTLS "Enable TLS support for publish/subscribe with mqtt (use MBEDTLS)" OFF)
-mark_as_advanced(UA_ENABLE_MQTT_TLS_MBEDTLS)
-
-option(UA_ENABLE_MQTT_TLS "Enable TLS support for publish/subscribe with mqtt" OFF)
-mark_as_advanced(UA_ENABLE_MQTT_TLS)
-if(UA_ENABLE_MQTT_TLS)
-    if(NOT UA_ENABLE_PUBSUB_MQTT)
-        message(FATAL_ERROR "Mqtt with TLS cannot be used without UA_ENABLE_PUBSUB_MQTT.")
-    endif()
-    if(NOT UA_ENABLE_ENCRYPTION)
-        message(FATAL_ERROR "Mqtt with TLS cannot be used without UA_ENABLE_ENCRYPTION.")
-    elseif(UA_ENABLE_ENCRYPTION STREQUAL "OPENSSL")
-        set(UA_ENABLE_MQTT_TLS_OPENSSL ON)
-        add_definitions(-DMQTT_USE_BIO)
-        configure_file(${PROJECT_SOURCE_DIR}/plugins/mqtt/templates/openssl_sockets.h "${PROJECT_BINARY_DIR}/src_generated/openssl_sockets.h" COPYONLY)
-    elseif(UA_ENABLE_ENCRYPTION STREQUAL "MBEDTLS")
-        set(UA_ENABLE_MQTT_TLS_MBEDTLS ON)
-        add_definitions(-DMQTT_USE_MBEDTLS)
-        configure_file(${PROJECT_SOURCE_DIR}/plugins/mqtt/templates/mbedtls_sockets.h "${PROJECT_BINARY_DIR}/src_generated/mbedtls_sockets.h" COPYONLY)
-    else()
-        message(FATAL_ERROR "UA_ENABLE_ENCRYPTION is set to an undefined value")
-    endif()
-endif()
-
 option(UA_ENABLE_STATUSCODE_DESCRIPTIONS "Enable conversion of StatusCode to human-readable error message" ON)
 mark_as_advanced(UA_ENABLE_STATUSCODE_DESCRIPTIONS)
 
@@ -651,12 +593,12 @@ include(linting_build)
 
 list(APPEND open62541_LIBRARIES "")
 
-if(UA_ENABLE_ENCRYPTION_OPENSSL OR UA_ENABLE_MQTT_TLS_OPENSSL)
+if(UA_ENABLE_ENCRYPTION_OPENSSL)
     # use the OpenSSL encryption library
     # https://cmake.org/cmake/help/v3.0/module/FindOpenSSL.html
     find_package(OpenSSL REQUIRED)
     list(APPEND open62541_LIBRARIES OpenSSL::Crypto OpenSSL::SSL)
-    endif ()
+endif()
 
 if(UA_ENABLE_ENCRYPTION_LIBRESSL)
     # See https://github.com/libressl-portable/portable/blob/master/FindLibreSSL.cmake
@@ -1194,21 +1136,6 @@ if(UA_ENABLE_PUBSUB)
             message("bpf library not found. XDP functionalities will not be available.")
         endif()
     endif()
-    if(UA_ENABLE_PUBSUB_MQTT)
-        if(WIN32)
-            MESSAGE(WARNING "Multithreading is enabled in MQTT plugin. This feature is under development and marked as EXPERIMENTAL")
-        else()
-            list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/deps/mqtt-c/include/mqtt_pal.h
-                 ${PROJECT_SOURCE_DIR}/deps/mqtt-c/include/mqtt.h
-                 ${PROJECT_SOURCE_DIR}/plugins/include/open62541/plugin/pubsub_mqtt.h
-                 ${PROJECT_SOURCE_DIR}/plugins/mqtt/ua_mqtt-c_adapter.h)
-            list(APPEND default_plugin_sources
-            #                 ${PROJECT_SOURCE_DIR}/deps/mqtt-c/src/mqtt_pal.c
-            #                 ${PROJECT_SOURCE_DIR}/deps/mqtt-c/src/mqtt.c
-                 ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_mqtt.c
-                 ${PROJECT_SOURCE_DIR}/plugins/mqtt/ua_mqtt-c_adapter.c)
-        endif()
-    endif()
     if(UA_ENABLE_MALLOC_SINGLETON AND UA_ENABLE_PUBSUB_BUFMALLOC)
         list(APPEND lib_sources ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_bufmalloc.c)
         list(APPEND internal_headers ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_bufmalloc.h)
@@ -1499,7 +1426,7 @@ if(UA_ENABLE_AMALGAMATION)
     if(UA_ENABLE_ENCRYPTION_MBEDTLS)
         target_include_directories(open62541-object PRIVATE ${MBEDTLS_INCLUDE_DIRS})
     endif()
-    if(UA_ENABLE_ENCRYPTION_OPENSSL OR UA_ENABLE_MQTT_TLS_OPENSSL)
+    if(UA_ENABLE_ENCRYPTION_OPENSSL)
         target_include_directories(open62541-object PRIVATE ${OPENSSL_INCLUDE_DIR})
     endif()
     if(UA_ENABLE_ENCRYPTION_LIBRESSL)
@@ -1601,7 +1528,7 @@ else()
     if(UA_ENABLE_ENCRYPTION_MBEDTLS)
         include_directories_private(${MBEDTLS_INCLUDE_DIRS})
     endif()
-    if(UA_ENABLE_ENCRYPTION_OPENSSL OR UA_ENABLE_MQTT_TLS_OPENSSL)
+    if(UA_ENABLE_ENCRYPTION_OPENSSL)
         include_directories_private(${OPENSSL_INCLUDE_DIR})
     endif()
     if(UA_ENABLE_ENCRYPTION_LIBRESSL)
