--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -373,11 +373,9 @@ if(UA_ENABLE_PUBSUB)
 
         endif()
     endif()
-    if(UA_ENABLE_PUBSUB_MQTT)
-        if(NOT WIN32)
-            ua_add_test(pubsub/check_pubsub_connection_mqtt.c)
-            ua_add_test(pubsub/check_pubsub_mqtt.c)
-        endif()
+    if(UA_ENABLE_MQTT)
+        ua_add_test(pubsub/check_pubsub_connection_mqtt.c)
+        ua_add_test(pubsub/check_pubsub_mqtt.c)
     endif()
     if(UA_ENABLE_PUBSUB_FILE_CONFIG)
         ua_add_test(pubsub/check_pubsub_configuration.c)
