--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -229,19 +229,21 @@ if(UA_ENABLE_PUBSUB)
         message(WARNING "Build option BUILD_SHARED_LIBS not supported for standalone subscriber and realtime examples. Skipping these examples.")
     else (NOT BUILD_SHARED_LIBS)
         add_example(pubsub_subscribe_standalone_dataset pubsub/pubsub_subscribe_standalone_dataset.c)
-        if(CMAKE_SYSTEM MATCHES "Linux")
-            add_example(pubsub_TSN_publisher_multiple_thread pubsub_realtime/pubsub_TSN_publisher_multiple_thread.c)
-            add_example(pubsub_TSN_loopback_single_thread pubsub_realtime/pubsub_TSN_loopback_single_thread.c)
-            target_link_libraries(pubsub_TSN_publisher_multiple_thread rt pthread)
-            target_link_libraries(pubsub_TSN_loopback_single_thread rt pthread)
-            if(UA_ENABLE_PUBSUB_ETH_UADP)
-                add_subdirectory(pubsub_realtime/nodeset)
-                add_example(pubsub_TSN_publisher pubsub_realtime/pubsub_TSN_publisher.c)
-                add_example(pubsub_TSN_loopback pubsub_realtime/pubsub_TSN_loopback.c)
-                target_link_libraries(pubsub_TSN_publisher rt pthread)
-                target_link_libraries(pubsub_TSN_loopback rt pthread)
-            endif()
-        endif()
+
+        # TODO: The TSN examples need to be reworked for the EventLoop model
+        # if(CMAKE_SYSTEM MATCHES "Linux")
+        #     add_example(pubsub_TSN_publisher_multiple_thread pubsub_realtime/pubsub_TSN_publisher_multiple_thread.c)
+        #     add_example(pubsub_TSN_loopback_single_thread pubsub_realtime/pubsub_TSN_loopback_single_thread.c)
+        #     target_link_libraries(pubsub_TSN_publisher_multiple_thread rt pthread)
+        #     target_link_libraries(pubsub_TSN_loopback_single_thread rt pthread)
+        #     if(UA_ENABLE_PUBSUB_ETH_UADP)
+        #         add_subdirectory(pubsub_realtime/nodeset)
+        #         add_example(pubsub_TSN_publisher pubsub_realtime/pubsub_TSN_publisher.c)
+        #         add_example(pubsub_TSN_loopback pubsub_realtime/pubsub_TSN_loopback.c)
+        #         target_link_libraries(pubsub_TSN_publisher rt pthread)
+        #         target_link_libraries(pubsub_TSN_loopback rt pthread)
+        #     endif()
+        # endif()
     endif()
     if(UA_ENABLE_PUBSUB_ENCRYPTION)
         add_example(pubsub_publish_encrypted pubsub/pubsub_publish_encrypted.c)
