refactor(el): Provide common EventLoop functions as external interface

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -49,6 +49,7 @@ generate_rst(${PROJECT_SOURCE_DIR}/include/open62541/plugin/log.h ${DOC_SRC_DIR}
 generate_rst(${PROJECT_SOURCE_DIR}/include/open62541/plugin/nodestore.h ${DOC_SRC_DIR}/plugin_nodestore.rst)
 generate_rst(${PROJECT_SOURCE_DIR}/include/open62541/plugin/pubsub.h ${DOC_SRC_DIR}/plugin_pubsub.rst)
 generate_rst(${PROJECT_SOURCE_DIR}/include/open62541/plugin/eventloop.h ${DOC_SRC_DIR}/plugin_eventloop.rst)
+generate_rst(${PROJECT_SOURCE_DIR}/include/open62541/plugin/eventloop_base_funcs.h ${DOC_SRC_DIR}/plugin_eventloop_base_funcs.rst)
 generate_rst(${PROJECT_SOURCE_DIR}/include/open62541/plugin/pki.h ${DOC_SRC_DIR}/plugin_pki.rst)
 generate_rst(${PROJECT_SOURCE_DIR}/include/open62541/plugin/securitypolicy.h ${DOC_SRC_DIR}/plugin_securitypolicy.rst)
 
