--- a/tests/fuzz/CMakeLists.txt
+++ b/tests/fuzz/CMakeLists.txt
@@ -60,6 +60,7 @@ link_libraries("-fsanitize=fuzzer")
 
 # Use different plugins for testing
 set(fuzzing_plugin_sources
+    ${PROJECT_SOURCE_DIR}/arch/common/ua_timer.c
     ${PROJECT_SOURCE_DIR}/arch/eventloop_common.c
     ${PROJECT_SOURCE_DIR}/arch/eventloop_posix.c
     ${PROJECT_SOURCE_DIR}/arch/eventloop_posix_select.c
