--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -297,7 +297,10 @@ mark_as_advanced(UA_ENABLE_IMMUTABLE_NODES)
 option(UA_FORCE_32BIT "Force compilation as 32-bit executable" OFF)
 mark_as_advanced(UA_FORCE_32BIT)
 
-option(UA_FORCE_WERROR "Force compilation with -Werror (or /WX on MSVC)" ON)
+option(UA_FORCE_WERROR "Force compilation with -Werror (or /WX on MSVC)" OFF)
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(UA_FORCE_WERROR ON)
+endif()
 
 option(UA_ENABLE_DEBUG_SANITIZER "Use sanitizer in debug mode" ON)
 mark_as_advanced(UA_ENABLE_DEBUG_SANITIZER)
