fix(tests): Revert change when setting -m32 build flag
Reverts part of commit 0e2cbabb7f8a70e2971f1821655e6f4b8f06b9ea

CI build 'Debug Build & Unit Tests (gcc, 32bit)' failed with previous setting.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -615,7 +615,7 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_C_COMPILER_ID STREQUAL "Clang")
         if(MSVC)
             message(FATAL_ERROR "Select the 32bit (cross-) compiler instead of forcing compiler options")
         endif()
-        check_add_cc_flag("-m32") # GCC and Clang, possibly more
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32") # GCC and Clang, possibly more
     endif()
 
     if(NOT MINGW AND NOT UA_BUILD_OSS_FUZZ)
